# limestone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
shaders/: COmain.frag  COmain.vert  ESmain.frag
src/: main.cpp
src/android/: settings.gradle.kts
src/android/app/: build.gradle.kts
src/android/app/src/androidTest/java/com/kiwku/limestone/: ExampleInstrumentedTest.kt
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/android/app/src/main/java/com/kiwku/limestone/: MainActivity.kt
src/android/app/src/main/res/values/: strings.xml  themes.xml
src/android/app/src/main/res/values-night/: themes.xml
src/android/app/src/test/java/com/kiwku/limestone/: ExampleUnitTest.kt
src/android/gradle/wrapper/: gradle-wrapper.properties
src/common/: Debug.cpp  Debug.hpp  GLBuffers.cpp  GLBuffers.hpp  GLShaderLoader.cpp  GLShaderLoader.hpp  GLTexture.cpp  GLTexture.hpp  OpenGL.cpp  OpenGL.hpp
src/core/: APU.cpp  APU.hpp  CPU.cpp  CPU.hpp  PPU.cpp  PPU.hpp  ROM.cpp  ROM.hpp
src/gui/: main.cpp
src/web/: main.cpp
web/: CMakeLists.txt
web/app/: index.html  index.js  styles.css
